Basic layout +  button event listeners

--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Test</h2>
+    <div class="header">
+        <div id="homeBtn">Home</div>
+        <div id="menuBtn">Menu</div>
+        <div id="contactBtn">Contact</div>
+    </div>
+    <div class="contentContainer">
+        <div class="content">
+
+        </div>
+    </div>
+    <div class="footer">
+        <div>Images stolen by Me</div>
+        <div>Content lorem ipsum'd</div>
+        <div>Layout inspired (IP theft)</div>
+    </div>
 </body>
 </html>
